# Cache

./: .gitignore  README.md  belady.py
Src/: CMakeLists.txt
Src/include/: arc_cache.hpp  global.hpp
Src/include/cache/: CacheInterface.hpp  arc_cache.hpp  optimal_cache.hpp
Src/include/cache/arc/: arc_cache.hpp
Src/include/cache/optimal/: optimal_cache.hpp
Src/include/cache/utils/driver/: driver.hpp
Src/include/global/: global.hpp
Src/include/test/: check_args.hpp  get_test_data.hpp  input_stream.hpp  parse_args.hpp  parse_test_result.hpp  read_answer.hpp  read_test.hpp  read_test_and_answer.hpp  test_files.hpp  test_struct.hpp
Src/include/utils/: logger.hpp
Src/src/: cache_test.cpp
Src/src/cache/: arc_cache.cpp  main.cpp  optimal_cache.cpp
Src/src/cache/arc/: arc_cache.cpp  arc_main.cpp
Src/src/cache/optimal/: optimal_main.cpp
Src/src/test/: arc_cache_test.cpp  cache_test.cpp  check_args.cpp  optimal_cache_test.cpp  parse_args.cpp  read_answer.cpp  read_test.cpp  read_test_and_answer.cpp  test_files.cpp
project_struct/: all_project_struct.txt  project_struct.txt  without_gitignore_project_struct.txt
tests/: testrun.sh
